<resources>
    <string name="app_name">XChange</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nearby">Nearby</string>
    <string name="pending">Pending</string>
    <string name="signin_prompt">What is Your Name?</string>
    <string name="submit_signin">Submit</string>
    <string name="table_title">Nearby Devices</string>
    <string name="send_button">Send Contacts</string>
    <string name="title">XChange</string>
    <string name="phone_number">Phone Number?</string>
    <string name="email">Email?</string>
    <string name="add_contact">Add Contacts</string>
    <string name="history">History</string>
    <string name="search">Search</string>
    <string name="XChange">XChange</string>
    <string name="call">Call</string>
    <string name="text">Text</string>
    <string name="email_button">Email</string>
</resources>
