<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/home_screen"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal"
    tools:context="com.m87.xchange.xchange.HomeScreenFragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title"
        android:textSize="38sp"
        android:id="@+id/title"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="76dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/pending_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pending"
        android:layout_centerInParent="true" />

    <Button
        android:id="@+id/nearby_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nearby"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/pending_button" />

</RelativeLayout>
