<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal"
    android:orientation="vertical"
    tools:context="com.m87.xchange.xchange.SigninFragent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/title"
            android:textSize="38sp"
            android:id="@+id/title"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signin_prompt"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:layout_below="@+id/title"
            android:layout_alignParentStart="true" />

        <EditText
            android:id="@+id/signin_text"
            android:layout_width="250dp"
            android:layout_height="36dp"
            android:background="@color/white"
            android:layout_below="@+id/user_name"
            android:layout_alignParentStart="true" />


        <TextView
            android:id="@+id/phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:layout_below="@+id/signin_text"
            android:layout_alignParentStart="true" />

        <EditText
            android:id="@+id/phone_number_enter"
            android:layout_width="250dp"
            android:layout_height="36dp"
            android:background="@color/white"
            android:layout_below="@+id/phone_number"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:layout_below="@+id/phone_number_enter"
            android:layout_alignParentStart="true" />

        <EditText
            android:id="@+id/email_enter"
            android:layout_width="250dp"
            android:layout_height="36dp"
            android:background="@color/white"
            android:layout_below="@+id/email"
            android:layout_alignParentStart="true" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/thumbnail"
            android:adjustViewBounds="true"
            android:layout_below="@+id/email_enter"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/submit_signin"
            android:text="@string/submit_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_below="@+id/thumbnail"
            android:layout_toEndOf="@+id/phone_number"
            android:layout_marginTop="84dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Choose Business Card from Gallery"
            android:id="@+id/upload_bc"
            android:layout_below="@+id/thumbnail"
            android:layout_alignParentStart="true" />
    </RelativeLayout>
</ScrollView>
